update: 15 files modified

--- a/notes/0037. 防抖、节流/demos/1/1.html
+++ b/notes/0037. 防抖、节流/demos/1/1.html
@@ -28,7 +28,7 @@
           timer = setTimeout(() => {
             timer = null
             fn.apply(this, args)
-          }, delay || 1000 / 60)
+          }, delay)
         }
       }
 
