update: 81 files modified

--- a/notes/0037. 防抖、节流/demos/1/1.html
+++ b/notes/0037. 防抖、节流/demos/1/1.html
@@ -19,29 +19,6 @@
     <h1>防抖（Debounce）示例</h1>
     <input type="text" id="inputField" placeholder="输入内容..." />
     <div id="output"></div>
-
-    <script>
-      function debounce(fn, delay) {
-        let timer = null
-        return function (...args) {
-          if (timer) clearTimeout(timer)
-          timer = setTimeout(() => {
-            timer = null
-            fn.apply(this, args)
-          }, delay)
-        }
-      }
-
-      const inputField = document.getElementById('inputField')
-      const output = document.getElementById('output')
-
-      function handleInput(event) {
-        output.textContent = `输入的内容: ${event.target.value}`
-      }
-
-      const debouncedHandleInput = debounce(handleInput, 300)
-
-      inputField.addEventListener('input', debouncedHandleInput)
-    </script>
+    <script src="./1.js"></script>
   </body>
 </html>
