--- a/notes/0037. 防抖、节流/demos/2/1.html
+++ b/notes/0037. 防抖、节流/demos/2/1.html
@@ -8,27 +8,6 @@
   <body>
     <h1>节流（Throttle）示例</h1>
     <p>尝试改变浏览器窗口大小，看看控制台的输出。</p>
-
-    <script>
-      // 定义节流函数
-      var throttle = function (fn, delay) {
-        let lastCall = 0
-        return function (...args) {
-          const now = Date.now()
-          if (now - lastCall >= delay) {
-            lastCall = now
-            fn.apply(this, args)
-          }
-        }
-      }
-
-      // 使用节流函数包装的函数
-      const logWindowSize = throttle(() => {
-        console.log(`Window size: ${window.innerWidth} x ${window.innerHeight}`)
-      }, 250) // 设置延迟时间为 250 毫秒
-
-      // 添加事件监听器
-      window.addEventListener('resize', logWindowSize)
-    </script>
+    <script src="./1.js"></script>
   </body>
 </html>
