--- a/notes/0080. window.confirm/demos/1/1.html
+++ b/notes/0080. window.confirm/demos/1/1.html
@@ -6,13 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-      if (window.confirm('您确定要重新加载此网站吗？')) {
-        // 用户点击了“确定”，执行重新加载操作
-        location.reload()
-      } else {
-        // 用户点击了“取消”，不做任何操作
-      }
-    </script>
+    <script src="./1.js"></script>
   </body>
 </html>
