update: 35 files modified

--- a/notes/0068. AMD/demos/1/1.html
+++ b/notes/0068. AMD/demos/1/1.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <!-- 引入依赖文件 -->
-    <script src="./require.js"></script>
+    <script src="../common/require.js"></script>
     <script>
       // 加载模块
       require(['./1.js'], function (obj) {
         // 模块的导出内容会注入到函数参数中
-        alert(obj.multiply(10, 20)); // 200
-      });
+        alert(obj.multiply(10, 20)) // 200
+      })
     </script>
   </body>
 </html>
