--- a/notes/0068. AMD/demos/3/1.html
+++ b/notes/0068. AMD/demos/3/1.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <!-- 引入依赖文件 -->
-    <script data-main="./main.js" src="./require.js"></script>
+    <script data-main="./scripts/main.js" src="../common/require.js"></script>
   </body>
 </html>
