update: 16 files modified

--- a/notes/0067. CMD/demos/1/index.html
+++ b/notes/0067. CMD/demos/1/index.html
@@ -6,8 +6,8 @@
     <title>CMD test</title>
   </head>
   <body></body>
-  <script src="js/libs/sea.js"></script>
+  <script src="libs/sea.js"></script>
   <script>
-    seajs.use('./js/modules/main');
+    seajs.use('./modules/main')
   </script>
 </html>
